--- a/Assignment_2/src/index.html
+++ b/Assignment_2/src/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pavandeep Portfolio</title>
+    <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <h2>
-        Pavandeep Portfolio
-     </h2>
+     
 </body>
 </html>
