done pubic folder

--- a/Assignment_2/src/index.html
+++ b/Assignment_2/src/index.html
@@ -6,8 +6,28 @@
     <title>Pavandeep Portfolio</title>
     <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+
+    <!-- SEO meta tags -->
+    <meta name="description" content="Pavandeep's portfolio showcasing skills and projects.">
+    <meta name="keywords" content="portfolio, web development, projects, skills">
+    <meta name="author" content="Pavandeep">
+
+    <!-- Open Graph (OG) meta tags for better social sharing -->
+    <meta property="og:title" content="Pavandeep Portfolio">
+    <meta property="og:description" content="Explore Pavandeep's portfolio showcasing skills and projects.">
+    <meta property="og:image" content="URL_TO_YOUR_OG_IMAGE">
+    <meta property="og:url" content="URL_TO_YOUR_PORTFOLIO">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card meta tags for better Twitter sharing -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@your_twitter_handle">
+    <meta name="twitter:title" content="Pavandeep Portfolio">
+    <meta name="twitter:description" content="Explore Pavandeep's portfolio showcasing skills and projects.">
+    <meta name="twitter:image" content="URL_TO_YOUR_OG_IMAGE">
 </head>
 <body>
-     
+    <!-- Your website content goes here -->
+    <h2>this is my portfolio website </h2>
 </body>
 </html>
